# PiPilot

./: .gitmodules  CMakeLists.txt  README.md
src/: crsf_pio_rx.c  crsf_pio_rx.h  madgwick.c  madgwick.h  main.c  mpu_6050_init.h  servo.c  servo.h
vendors/: CMakeLists.txt
